Fix editor styles on new job page
Hide buttons which do not fit with the design
Replace wording "Job description" to "About the gig"

--- a/app/assets/stylesheets/actiontext.scss
+++ b/app/assets/stylesheets/actiontext.scss
@@ -34,3 +34,55 @@
     }
   }
 }
+
+@mixin hideTrixButtons($collection...) {
+  @each $title in $collection {
+    button[title="#{$title}"] {
+      display: none;
+    }
+  }
+}
+
+.trix-button-row {
+  height: 30px;
+  border-radius: 4px 4px 0px 0px;
+  border: 1px solid $color-beige;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  padding-left: 23px;
+  justify-content: flex-start !important;
+
+  @include hideTrixButtons(
+    "Strikethrough",
+    "Link",
+    "Heading",
+    "Quote",
+    "Code",
+    "Numbers",
+    "Decrease Level",
+    "Increase Level",
+    "Undo",
+    "Redo"
+  );
+
+  .trix-button {
+    border: none;
+    height: 28px;
+    line-height: 30px;
+    border-left: none !important;
+    width: auto;
+    &:not(:first-child) {
+      margin-left: 21px;
+    }
+  }
+  .trix-button-group {
+    margin: 0;
+    border: none;
+    &:not(:first-child) {
+      margin-left: 0px;
+    }
+  }
+
+  .trix-button-group--history-tools {
+    display: none;
+  }
+}
