--- a/app/assets/stylesheets/common.blocks/create-listing-page/create-listing-page__text-area.scss
+++ b/app/assets/stylesheets/common.blocks/create-listing-page/create-listing-page__text-area.scss
@@ -1,3 +1,4 @@
 .create-listing-page__text-area {
   margin-bottom: 30px;
+  margin-top: 0 !important;
 }
